feat- 增加登入後header navbar 會員頭像

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.11",
     "next": "15.2.4",
     "react": "^19.0.0",
