--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.11",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "swr": "^2.3.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
