--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.11",
+    "embla-carousel-react": "^8.6.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
