--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^8.6.0",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
