--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
-    "swr": "^2.3.3",
     "react-image-file-resizer": "^0.4.8",
+    "react-range": "^1.10.0",
+    "swr": "^2.3.3",
     "zod": "^3.24.3"
   },
   "devDependencies": {
