--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-image-file-resizer": "^0.4.8",
     "react-range": "^1.10.0",
     "swr": "^2.3.3",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
