--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "orval": "^7.9.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
