--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-hot-toast": "^2.5.2",
     "react-image-file-resizer": "^0.4.8",
     "react-range": "^1.10.0",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "swr": "^2.3.3",
     "zod": "^3.24.3",
     "zustand": "^5.0.4"
