--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-image-file-resizer": "^0.4.8",
     "react-range": "^1.10.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "swr": "^2.3.3",
